--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>What App Clone</title>
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"></link>
         <link rel="stylesheet" href="style.css">
         <head>
@@ -18,6 +18,7 @@
             <span id="a" onclick="a()">CHATS</span>
             <span id="b" onclick="b()">STATUS</span>
             <span id="c" onclick="c()">CALLS</span>
+            <div class="clear"></div>
         </div>
         <div id="body">
             <div id="chat">
