--- a/index.html
+++ b/index.html
@@ -22,43 +22,43 @@
         </div>
         <div id="body">
             <div id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/11159966.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Coder</b><br><span id="left">Hameha chudail hi rahegi kya?🤣</span><span id="right"><span id="pending">6:40<br><span id="circle">3</span></span></span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/11159966.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Myo Thu Ra Thun</b><br><span id="left">What's Up?🤣</span><span id="right"><span id="pending">6:40<br><span id="circle">3</span></span></span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/15560478.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Kad</b><br><span id="left">Not bad.. not good either</span><span id="right"><span id="pending">5:00<br><span id="circle">1</span></span></span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/15560478.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Thu Rein Htun</b><br><span id="left">Not bad.. not good either</span><span id="right"><span id="pending">5:00<br><span id="circle">1</span></span></span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/3489946.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Aravind</b><br><span id="left">I wanna eat a brinjal</span><span id="right"><span id="pending">Yesterday<br><span id="circle">2</span></span></span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/3489946.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Hein Htet Aung</b><br><span id="left">I wanna eat a baga</span><span id="right"><span id="pending">Yesterday<br><span id="circle">2</span></span></span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/16989262.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Sofija</b><br><span id="left">You: My Panthera Tigris🐅</span><span id="right">Yesterday</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/16989262.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Sofija</b><br><span id="left">You: I am Tiger🐅</span><span id="right">Yesterday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/10779261.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Ashutosh</b><br><span id="left"><i class="fa fa-check"></i>Bye(from Ashu dadaji)..🙄</span><span id="right">Yesterday</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/10779261.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Nay Hlaing Win</b><br><span id="left"><i class="fa fa-check"></i>Bye(form Pyi)..🙄</span><span id="right">Yesterday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/14931694.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Rimjhim</b><br><span id="left"><i class="fa fa-check"></i>Bye Jhimrim/Jimjim di🤗</span><span id="right">Friday</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/14931694.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Baby❤️</b><br><span id="left"><i class="fa fa-check"></i>GoodNight🤗</span><span id="right">Friday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/15486892.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Ruba</b><br><span id="left">Do you have gills?🐟</span><span id="right">Friday</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/15486892.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b></b><br><span id="left">Do you have gills?🐟</span><span id="right">Friday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-               <img src="https://api.sololearn.com/Uploads/Avatars/16778611.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Mehnaz</b><br><span id="left">Best of luck sista😉</span><span id="right">Friday</span>
+               <img src="https://api.sololearn.com/Uploads/Avatars/16778611.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Facebook User</b><br><span id="left">Best of luck sister😉</span><span id="right">Friday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/4586359.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Serena di</b><br><span id="left">Hehehe😆...🌸🌹🌺🌼🌷</span><span id="right">15/4/20</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/4586359.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>MK</b><br><span id="left">Hehehe😆...🌸🌹🌺🌼🌷</span><span id="right">15/4/20</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/8175030.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Mitali</b><br><span id="left">You: How to use youtube?😅</span><span id="right">24/9/19</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/8175030.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>A Girl</b><br><span id="left">You: How to use youtube?😅</span><span id="right">24/9/19</span>
             </div>
             <div id="break" style="background:transparent"></div>
         </div>
