--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
-                <img src="https://api.sololearn.com/Uploads/Avatars/15486892.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b></b><br><span id="left">Do you have gills?🐟</span><span id="right">Friday</span>
+                <img src="https://api.sololearn.com/Uploads/Avatars/15486892.jpg" onerror="this.src='https://www.sololearn.com/Images/NoAvatar.jpg'"><b>Ma Thi Bu</b><br><span id="left">Do you have girlfriend?🐟</span><span id="right">Friday</span>
             </div>
             <div id="break"></div>
             <div class="chatn" id="chat">
